chore: update driver management